# AERSP424

./: JackA_README.md  JackAndersonPushTest.ccp  README.md  Readme_File.txt
HWs/Progress Check Week 6/: Attempt_2.cpp  Attempt_2.hpp  CMakeLists.txt  Progress_Check.cpp
HWs/Progress Check Week 6/Runninng_tests/: Attempt_2.cpp  Attempt_3.txt  CMakeLists.txt
HWs/Progress Check Week 6/example-c-rk4/: CMakeLists.txt  build.sh  plot.py
HWs/Progress Check Week 6/example-c-rk4/include/: datatypes.h  helpers.h  sim.h
HWs/Progress Check Week 6/example-c-rk4/src/: helpers.c  main.c  sim.c
HWs/Progress Check Week 6/example-rk4-TA/: CMakeLists.txt  README.md  build.sh
HWs/Progress Check Week 6/example-rk4-TA/__MACOSX/: ._CMakeLists.txt  ._README.md  ._src
HWs/Progress Check Week 6/example-rk4-TA/__MACOSX/src/: ._plane.cpp
HWs/Progress Check Week 6/example-rk4-TA/include/: plane.hpp
HWs/Progress Check Week 6/example-rk4-TA/src/: main.cpp  plane.cpp
